8297730: C2: Arraycopy intrinsic throws incorrect exception

Backport-of: 5a478ef7759e64da6d17426673700ff0d9c66b33